[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=177007

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2018-01-30
Reviewed by Yusuke Suzuki.

Source/JavaScriptCore:

* interpreter/StackVisitor.cpp:
(JSC::StackVisitor::Frame::dump const):
Changed the type of locationRawBits from unsigned to uintptr_t.
* runtime/IntlNumberFormat.cpp:
(JSC::IntlNumberFormat::createNumberFormat):
Initialize 'style' to avoid potentially uninitialized local variable warning.

Source/WTF:

A 32 bit integer should not be casted to a pointer directly in 64
bit Windows. It should be casted to a uintptr_t beforehand.

Rules for Using Pointers (Windows)
https://msdn.microsoft.com/library/windows/desktop/aa384242

* wtf/ThreadingWin.cpp (InvalidThread): Casted 0xbbadbeef to uintptr_t.

Canonical link: https://commits.webkit.org/198122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227872 268f45cc-cd09-0410-ab3c-d52691b4dbfc